fix alignment for publications, and remove entire link, not just image

--- a/style/devlan-style.css
+++ b/style/devlan-style.css
@@ -461,23 +461,25 @@ h1 {
   margin: 28px 0px;
 }
 
-@media (max-width: 600px) {
-  .pubThumbnail {
-    display: none;
-  }
-}
-
 .pubThumbnail {
   width: 200px;
   height: 100px;
   box-shadow: 3px 3px 4px 2px #9e9e9e;
-  /*background: firebrick;*/
 }
 
 .pubContentContainer {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
+}
+
+@media (max-width: 600px) {
+  .pubThumbnailLink {
+    display: none;
+  }
+  .pubContentContainer {
+    margin-left: 0px;
+  }
 }
 
 .pubAuthorContainer {
